fixed position scrollbar doesn't work

--- a/assets/scss/partial_laptop_style.scss
+++ b/assets/scss/partial_laptop_style.scss
@@ -44,6 +44,7 @@
         .merch-buttons {
             justify-content: space-between;
             padding: 0 240px 65px 5px;
+            margin: 60px 0;
         }
     }
 }
