--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -329,8 +329,6 @@ video {
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
     &::-webkit-scrollbar {
-        position: fixed;
-        bottom: 3;
         background-color: darken($coloured-light-grey-1, 15%);
         height: 8px;
     }
@@ -346,7 +344,7 @@ video {
     scroll-snap-align: start;
     min-height: 100%;
     min-width: 100%;
-    padding-top: 150px;
+    padding-top: 190px;
     img {
         display: block;
         margin: 20px auto;
